[package]
name = "axum-server-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
mime_guess = "2.0.4"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.8", features = ["io"] }
